<resources>
    <string name="app_name">Sandbox2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="predictive_animations">Predictive Animations</string>
    <string name="custom_animator">Custom Animator</string>
</resources>
