<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sandbox2.ColorsFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:scrollbars="vertical" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:checkedButton="@+id/add_btn"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete" />

        <RadioButton
            android:id="@+id/add_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/add" />

        <RadioButton
            android:id="@+id/change_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/predictive_animations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/predictive_animations" />

        <CheckBox
            android:id="@+id/custom_animator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/custom_animator" />

    </LinearLayout>

</LinearLayout>
